# CIS22B-Midterm

./: README.md
D022B-Midterm-Q1/: CMakeLists.txt
D022B-Midterm-Q1/src/: Employee.cpp  Employee.hpp  Employee_main.cpp  Person.cpp  Person.hpp
D022B-Midterm-Q2/: .clang-format  CMakeLists.txt
D022B-Midterm-Q2/src/: Trangle_main.cpp  Triangle.cpp  Triangle.hpp
